# pycterra-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint_test.yml
src/pycterra_cli/: __init__.py
tests/: main.py
