[project]
name = "pycterra_cli"
version = "0.0.2"
authors = [
  { name="Andrea Orlandi", email="andrea.orlandi@picterra.ch" },
]
keywords = ["picterra", "shell", "cli", "python"]
description = "A tiny CLI wrapper around Picterra Python API Client"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [ # https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#dependencies-and-requirements
  "picterra==2.0.0",
]
[project.urls]
Homepage = "https://github.com/ao-picterra/pycterra-cli"
Issues = "https://github.com/ao-picterra/pycterra-cli/issues"
[project.scripts]
pycterra = "pycterra_cli:main" # https://setuptools.pypa.io/en/latest/userguide/entry_point.html#entry-points-for-plugins
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"